
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int KEY ;

void changeport(char *code, int port, int offset) {
 char *ptr;
 ptr=code+offset;
 port^=KEY;

 *ptr++=(char)((port>>8)&0xff);
 *ptr++=(char)(port&0xff);
}
